--- a/ Data Cleaning & Analysis /Day24Joining and Merging/01practise.ipynb
+++ b/ Data Cleaning & Analysis /Day24Joining and Merging/01practise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Right Join:    ID   Name  Math\n",
+      "0   1  Aarav    85\n",
+      "1   2   Sita    78\n",
+      "2   4    NaN    92\n"
+     ]
+    }
+   ],
+   "source": [
+    "right = pd.merge(students, marks, on='ID', how='right')\n",
+    "print(\"Right Join:\", right)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -64,29 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Right Join:    ID   Name  Math\n",
-      "0   1  Aarav    85\n",
-      "1   2   Sita    78\n",
-      "2   4    NaN    92\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "right = pd.merge(students, marks, on='ID', how='right')\n",
-    "print(\"Right Join:\", right)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
